button in events on mobile fix

--- a/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
+++ b/source/css/scss/custom/_M47-Event-Hero-Sticky-CTA.scss
@@ -32,6 +32,10 @@
 	}
 
 	.cta {	
+		@include media-breakpoint-up(xs) {
+			padding-right:15px;
+			padding-left:15px;
+		}
 		@include media-breakpoint-up(sm) {
 			width: 100%;
 		}
